css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* General tags */
body{
    font-family: 'open sans', sans-serif;
}

header{
    background-color: #fff;
    position: sticky;
    top: 0;
    z-index: 10;
    padding: 20px 10px;
}

h1{
    width: 100%;
    font-size: 70px;
    font-weight: 900;
    padding: 20px 0;
}

h2{
    font-size: 40px;
    padding: 20px 0;
}

h3{
    font-size: 25px;
}

ul{
    list-style-type: none;
}

li{
    display: inline-block;
    margin-right: 15px;
}

p{
    padding: 20px 0;
}

hr{
    border-color: #999;
}

.footer-info ul{
    padding: 20px 0;
}

.footer-info ul li{
    padding: 10px 0;
}

/* Link related */
.button a, .button a:visited{
    text-decoration: none;
    color: #fff;
}

.white-button a, .white-button a:visited{
    text-decoration: none;
    color: #000;
}

.footer-info ul li a, .footer-info ul li a:visited{
    text-decoration: none;
    color: #fff;
}

/* Flexbox and layout tools */
.d-flex{
    display: flex;
}

.align-content{
    justify-content: center;
    align-items: center;
    align-content: center;
    flex-wrap: wrap;
}

.align-paragraph{
    justify-content: space-between;
    align-items: flex-start;
    align-content: flex-start;
    flex-wrap: wrap;
}

.align-left{
    justify-content: flex-start;
    align-items: center;
    align-content: center;
    flex-wrap: wrap;
}

.align-right{
    justify-content: flex-end;
    align-items: center;
    align-content: center;
    flex-wrap: wrap;
}

.inline-block{
    display: inline-block;
}

/* Containers */
.container{
    max-width: 1180px;
    margin: 0 auto;
}

.col-100{
    width: 100%;
}
.col-70{
    width: 70%;
}
.col-60{
    width: 60%;
}
.col-50{
    width: 50%;
}
.col-40{
    width: 40%;
}
.col-30{
    width: 30%;
}
.col-25{
    width: 25%;
}
.col-20{
    width: 20%;
}
.col-10{
    width: 10%;
}

.jumbotron{
    padding: 30px 0;
    height: 650px;
}

.text-box{
    padding: 30px;
}


/* Elements */
.logo{
    margin: 7px;
}

.arrow-down{
    font-size: 50px;
    position: absolute;
    bottom: -120px;
}

#invis-line{
    border: 0.3px solid #FAFAFA;
    margin: 50px 0;
}

.button{
    padding: 5px;
    background-color: #0061FE;
    color: #fff;
    text-align: center;
    margin: 10px 0;
}

.white-button{
    padding: 5px;
    border: 1px solid #000;
    background-color: #fff;
    color: #000;
    text-align: center;
    margin: 10px 0;
}

.radio-button{
    margin: 20px 40px 20px 0;
}

.plan-name{
    padding: 10px 0;
}

.img-paragraph{
    width: 100%;
}

.footer-info{
    padding: 70px 0;
}

.footer-lang{
    padding: 50px 0;
}

.jumbo-spacing{
    background-color: #fff;
    height: 100px;
}

/* Utilities */
.black-text{
    color: #000;
}

.blue-text{
    color: #0061FE;
}

.white-text{
    color: #fff;
}

.grey-text{
    color: #999;
}

.text-center{
    text-align: center;
}

.bold{
    font-weight: bold;
}

.text-reset{
    text-decoration: none;
}

.plan-box{
    border: 1px solid #999;
    margin: 30px 0;
}

.bg-lightblue{
    background-color: #B4D0E6;
}

.bg-white{
    background-color: #fff;
}

.bg-black{
    background-color: #000;
}

.position-relative{
    position: relative;
}

.jumbo-text-spacing{
    padding-bottom: 30px;
}

